--- a/todoCrudTask/package.json
+++ b/todoCrudTask/package.json
@@ -13,12 +13,15 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "express-busboy": "^8.0.0",
+    "express-session": "^1.17.1",
+    "express-socket.io-session": "^1.3.5",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.26",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.11",
+    "socket.io": "^2.3.0",
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
